src/main/java/eu/clarin/sru/fcs/qlparser/fcs/FCSParser.java
// Generated from eu/clarin/sru/fcs/qlparser/fcs/FCSParser.g4 by ANTLR 4.13.2
package eu.clarin.sru.fcs.qlparser.fcs;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FCSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		L_PAREN=1, R_PAREN=2, L_SQUARE_BRACKET=3, R_SQUARE_BRACKET=4, OR=5, AND=6, 
		NOT=7, FWD_SLASH=8, L_CURLY_BRACKET=9, R_CURLY_BRACKET=10, Q_ONE_OR_MORE=11, 
		Q_ZERO_OR_MORE=12, Q_ZERO_OR_ONE=13, Q_COMMA=14, OPERATOR_EQ=15, OPERATOR_NE=16, 
		COLON=17, WITHIN=18, SIMPLE_WITHIN_SCOPE=19, REGEXP_FLAGS=20, IDENTIFIER=21, 
		INTEGER=22, REGEXP=23, QUOTED_STRING=24, Space=25;
	public static final int
		RULE_query = 0, RULE_main_query = 1, RULE_query_disjunction = 2, RULE_query_sequence = 3, 
		RULE_query_group = 4, RULE_query_simple = 5, RULE_quantifier = 6, RULE_query_implicit = 7, 
		RULE_query_segment = 8, RULE_within_part = 9, RULE_within_part_simple = 10, 
		RULE_expression = 11, RULE_expression_or = 12, RULE_expression_and = 13, 
		RULE_expression_group = 14, RULE_expression_not = 15, RULE_expression_basic = 16, 
		RULE_attribute = 17, RULE_qualifier = 18, RULE_identifier = 19, RULE_regexp = 20, 
		RULE_regexp_pattern = 21, RULE_regexp_flag = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "main_query", "query_disjunction", "query_sequence", "query_group", 
			"query_simple", "quantifier", "query_implicit", "query_segment", "within_part", 
			"within_part_simple", "expression", "expression_or", "expression_and", 
			"expression_group", "expression_not", "expression_basic", "attribute", 
			"qualifier", "identifier", "regexp", "regexp_pattern", "regexp_flag"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'|'", "'&'", "'!'", "'/'", "'{'", 
			"'}'", "'+'", "'*'", "'?'", "','", "'='", "'!='", "':'", "'within'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "L_PAREN", "R_PAREN", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "OR", 
			"AND", "NOT", "FWD_SLASH", "L_CURLY_BRACKET", "R_CURLY_BRACKET", "Q_ONE_OR_MORE", 
			"Q_ZERO_OR_MORE", "Q_ZERO_OR_ONE", "Q_COMMA", "OPERATOR_EQ", "OPERATOR_NE", 
			"COLON", "WITHIN", "SIMPLE_WITHIN_SCOPE", "REGEXP_FLAGS", "IDENTIFIER", 
			"INTEGER", "REGEXP", "QUOTED_STRING", "Space"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FCSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FCSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public Main_queryContext main_query() {
			return getRuleContext(Main_queryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FCSParser.EOF, 0); }
		public TerminalNode WITHIN() { return getToken(FCSParser.WITHIN, 0); }
		public Within_partContext within_part() {
			return getRuleContext(Within_partContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			main_query();
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITHIN) {
				{
				setState(47);
				match(WITHIN);
				setState(48);
				within_part();
				}
			}

			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_queryContext extends ParserRuleContext {
		public Query_simpleContext query_simple() {
			return getRuleContext(Query_simpleContext.class,0);
		}
		public Query_groupContext query_group() {
			return getRuleContext(Query_groupContext.class,0);
		}
		public Query_sequenceContext query_sequence() {
			return getRuleContext(Query_sequenceContext.class,0);
		}
		public Query_disjunctionContext query_disjunction() {
			return getRuleContext(Query_disjunctionContext.class,0);
		}
		public Main_queryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterMain_query(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitMain_query(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitMain_query(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_queryContext main_query() throws RecognitionException {
		Main_queryContext _localctx = new Main_queryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_query);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				query_simple();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				query_group();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				query_sequence();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(56);
				query_disjunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_disjunctionContext extends ParserRuleContext {
		public List<Query_simpleContext> query_simple() {
			return getRuleContexts(Query_simpleContext.class);
		}
		public Query_simpleContext query_simple(int i) {
			return getRuleContext(Query_simpleContext.class,i);
		}
		public List<Query_sequenceContext> query_sequence() {
			return getRuleContexts(Query_sequenceContext.class);
		}
		public Query_sequenceContext query_sequence(int i) {
			return getRuleContext(Query_sequenceContext.class,i);
		}
		public List<Query_groupContext> query_group() {
			return getRuleContexts(Query_groupContext.class);
		}
		public Query_groupContext query_group(int i) {
			return getRuleContext(Query_groupContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(FCSParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(FCSParser.OR, i);
		}
		public Query_disjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_disjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_disjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_disjunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_disjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_disjunctionContext query_disjunction() throws RecognitionException {
		Query_disjunctionContext _localctx = new Query_disjunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query_disjunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(59);
				query_simple();
				}
				break;
			case 2:
				{
				setState(60);
				query_sequence();
				}
				break;
			case 3:
				{
				setState(61);
				query_group();
				}
				break;
			}
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				match(OR);
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(65);
					query_simple();
					}
					break;
				case 2:
					{
					setState(66);
					query_sequence();
					}
					break;
				case 3:
					{
					setState(67);
					query_group();
					}
					break;
				}
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_sequenceContext extends ParserRuleContext {
		public List<Query_simpleContext> query_simple() {
			return getRuleContexts(Query_simpleContext.class);
		}
		public Query_simpleContext query_simple(int i) {
			return getRuleContext(Query_simpleContext.class,i);
		}
		public List<Query_groupContext> query_group() {
			return getRuleContexts(Query_groupContext.class);
		}
		public Query_groupContext query_group(int i) {
			return getRuleContext(Query_groupContext.class,i);
		}
		public Query_sequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_sequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_sequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_sequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_sequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_sequenceContext query_sequence() throws RecognitionException {
		Query_sequenceContext _localctx = new Query_sequenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_query_sequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(76);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case L_SQUARE_BRACKET:
				case REGEXP:
					{
					setState(74);
					query_simple();
					}
					break;
				case L_PAREN:
					{
					setState(75);
					query_group();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8388618L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_groupContext extends ParserRuleContext {
		public TerminalNode L_PAREN() { return getToken(FCSParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(FCSParser.R_PAREN, 0); }
		public Query_disjunctionContext query_disjunction() {
			return getRuleContext(Query_disjunctionContext.class,0);
		}
		public Query_sequenceContext query_sequence() {
			return getRuleContext(Query_sequenceContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public Query_groupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_group(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_group(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_group(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_groupContext query_group() throws RecognitionException {
		Query_groupContext _localctx = new Query_groupContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_query_group);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(L_PAREN);
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(81);
				query_disjunction();
				}
				break;
			case 2:
				{
				setState(82);
				query_sequence();
				}
				break;
			}
			setState(85);
			match(R_PAREN);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14848L) != 0)) {
				{
				setState(86);
				quantifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_simpleContext extends ParserRuleContext {
		public Query_implicitContext query_implicit() {
			return getRuleContext(Query_implicitContext.class,0);
		}
		public Query_segmentContext query_segment() {
			return getRuleContext(Query_segmentContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public Query_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_simple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_simple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_simple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_simpleContext query_simple() throws RecognitionException {
		Query_simpleContext _localctx = new Query_simpleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_query_simple);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REGEXP:
				{
				setState(89);
				query_implicit();
				}
				break;
			case L_SQUARE_BRACKET:
				{
				setState(90);
				query_segment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14848L) != 0)) {
				{
				setState(93);
				quantifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuantifierContext extends ParserRuleContext {
		public TerminalNode Q_ONE_OR_MORE() { return getToken(FCSParser.Q_ONE_OR_MORE, 0); }
		public TerminalNode Q_ZERO_OR_MORE() { return getToken(FCSParser.Q_ZERO_OR_MORE, 0); }
		public TerminalNode Q_ZERO_OR_ONE() { return getToken(FCSParser.Q_ZERO_OR_ONE, 0); }
		public TerminalNode L_CURLY_BRACKET() { return getToken(FCSParser.L_CURLY_BRACKET, 0); }
		public TerminalNode R_CURLY_BRACKET() { return getToken(FCSParser.R_CURLY_BRACKET, 0); }
		public List<TerminalNode> INTEGER() { return getTokens(FCSParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(FCSParser.INTEGER, i);
		}
		public TerminalNode Q_COMMA() { return getToken(FCSParser.Q_COMMA, 0); }
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuantifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuantifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_quantifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Q_ONE_OR_MORE:
				{
				setState(96);
				match(Q_ONE_OR_MORE);
				}
				break;
			case Q_ZERO_OR_MORE:
				{
				setState(97);
				match(Q_ZERO_OR_MORE);
				}
				break;
			case Q_ZERO_OR_ONE:
				{
				setState(98);
				match(Q_ZERO_OR_ONE);
				}
				break;
			case L_CURLY_BRACKET:
				{
				{
				setState(99);
				match(L_CURLY_BRACKET);
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(100);
					match(INTEGER);
					}
					break;
				case 2:
					{
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==INTEGER) {
						{
						setState(101);
						match(INTEGER);
						}
					}

					setState(104);
					match(Q_COMMA);
					setState(105);
					match(INTEGER);
					}
					break;
				case 3:
					{
					setState(106);
					match(INTEGER);
					setState(107);
					match(Q_COMMA);
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==INTEGER) {
						{
						setState(108);
						match(INTEGER);
						}
					}

					}
					break;
				}
				setState(113);
				match(R_CURLY_BRACKET);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_implicitContext extends ParserRuleContext {
		public RegexpContext regexp() {
			return getRuleContext(RegexpContext.class,0);
		}
		public Query_implicitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_implicit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_implicit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_implicit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_implicit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_implicitContext query_implicit() throws RecognitionException {
		Query_implicitContext _localctx = new Query_implicitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_query_implicit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			regexp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Query_segmentContext extends ParserRuleContext {
		public TerminalNode L_SQUARE_BRACKET() { return getToken(FCSParser.L_SQUARE_BRACKET, 0); }
		public TerminalNode R_SQUARE_BRACKET() { return getToken(FCSParser.R_SQUARE_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Query_segmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterQuery_segment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitQuery_segment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitQuery_segment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_segmentContext query_segment() throws RecognitionException {
		Query_segmentContext _localctx = new Query_segmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_query_segment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(L_SQUARE_BRACKET);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3932290L) != 0)) {
				{
				setState(119);
				expression();
				}
			}

			setState(122);
			match(R_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Within_partContext extends ParserRuleContext {
		public Within_part_simpleContext within_part_simple() {
			return getRuleContext(Within_part_simpleContext.class,0);
		}
		public Within_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_within_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterWithin_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitWithin_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitWithin_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Within_partContext within_part() throws RecognitionException {
		Within_partContext _localctx = new Within_partContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_within_part);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			within_part_simple();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Within_part_simpleContext extends ParserRuleContext {
		public TerminalNode SIMPLE_WITHIN_SCOPE() { return getToken(FCSParser.SIMPLE_WITHIN_SCOPE, 0); }
		public Within_part_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_within_part_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterWithin_part_simple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitWithin_part_simple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitWithin_part_simple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Within_part_simpleContext within_part_simple() throws RecognitionException {
		Within_part_simpleContext _localctx = new Within_part_simpleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_within_part_simple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SIMPLE_WITHIN_SCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression_basicContext expression_basic() {
			return getRuleContext(Expression_basicContext.class,0);
		}
		public Expression_groupContext expression_group() {
			return getRuleContext(Expression_groupContext.class,0);
		}
		public Expression_orContext expression_or() {
			return getRuleContext(Expression_orContext.class,0);
		}
		public Expression_andContext expression_and() {
			return getRuleContext(Expression_andContext.class,0);
		}
		public Expression_notContext expression_not() {
			return getRuleContext(Expression_notContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FCSParserListener ) ((FCSParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCSParserVisitor ) return ((FCSParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expression);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				expression_basic();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				expression_group();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				expression_or();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				expression_and();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				expression_not();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
